@@ -12,7 +12,7 @@ scalacOptions ++= Seq("-deprecation", "-optimise", "-explaintypes", "-verbose", 
 
 libraryDependencies += "org.scala-lang" % "scala-swing" % "2.9.2"
 
-libraryDependencies += "org.fusesource.scalate" % "scalate-page" % "1.5.3"
+libraryDependencies += "org.fusesource.scalate" % "scalate-wikitext_2.9" % "1.6.1"
 
 libraryDependencies += "com.thoughtworks.xstream" % "xstream" % "1.4.3"
 
